--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -1,18 +1,19 @@
 ---
 // Social media links component similar to Brittany Chiang's design
+import { siteConfig } from '../config/site';
 ---
 
 <div class="social-sidebar">
 	<ul class="social-list">
 		<li>
-			<a href="https://github.com/toniRamos" target="_blank" rel="noopener noreferrer" title="GitHub">
+			<a href={siteConfig.social.github} target="_blank" rel="noopener noreferrer" title="GitHub">
 				<svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github">
 					<path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"/>
 				</svg>
 			</a>
 		</li>
 		<li>
-			<a href="https://www.linkedin.com/in/antonioramostorres/" target="_blank" rel="noopener noreferrer" title="LinkedIn">
+			<a href={siteConfig.social.linkedin} target="_blank" rel="noopener noreferrer" title="LinkedIn">
 				<svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin">
 					<path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"/>
 					<rect x="2" y="9" width="4" height="12"/>
@@ -25,7 +26,7 @@
 
 <div class="email-sidebar">
 	<div class="email-link">
-		<a href="mailto:antonio@example.com">antonio@example.com</a>
+		<a href={`mailto:${siteConfig.email}`}>{siteConfig.email}</a>
 	</div>
 </div>
 
